RESOLVED FIXED 243344
Non-unified build fixes, late July 2022 edition
https://bugs.webkit.org/show_bug.cgi?id=243344
Summary Non-unified build fixes, late July 2022 edition
Michael Catanzaro
Reported 2022-07-29 09:00:49 PDT
Non-unified build fixes, late July 2022 edition
Attachments
Michael Catanzaro
Comment 1 2022-07-29 09:29:41 PDT
OK, well I cannot successfully link a non-unified build because ld uses too much RAM, so this commit might not be comprehensive. But it should help, at least.
Michael Catanzaro
Comment 2 2022-07-29 09:31:37 PDT
EWS
Comment 3 2022-07-29 11:18:08 PDT
Committed 252956@main (19c49cf8315e): <https://commits.webkit.org/252956@main> Reviewed commits have been landed. Closing PR #2851 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.